# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-07-25 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the configuration code paths so they are updated after a
      service update has been processed
      (with usage of code_paths_add and/or code_paths_remove)

2020-07-15 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the Haskell CloudI API subscribe function so an execution thread
      will properly cycle through the subscriptions using the same pattern
    * Remove SIGKILL use when an external service has closed its
      stdout/stderr pipes to depend on cloudi_core_i_services_monitor
      enforcing the termination timeout
    * Use 2 pools of cloudi_core_i_os_spawn ports with
      OS_SPAWN_POOL1 for creating and monitoring OS processes and
      OS_SPAWN_POOL2 for killing OS processes

2020-07-14 Michael Truog   <mjtruog at protonmail dot com>

    * Add a FatalError exception to the
      Go, Haskell, OCaml CloudI API that must
      cause the service process to restart
    * Add an Assert function to the Go CloudI API with an
      AssertionError exception
    * Ensure all external service CloudI APIs handle an AssertionError
      as a fatal error that causes the service process to restart
    * Haskell, Python, Python/C, Ruby CloudI API now correctly
      handle exit being called in a service request callback function

2020-07-13 Michael Truog   <mjtruog at protonmail dot com>

    * Change the C++ CloudI API fatal_exception name to fatal_error
    * Add a FatalError exception class to the
      Java, JavaScript, Perl, PHP, Python, Python/C, Ruby CloudI API
      to be a base class for exceptions that must
      cause the service process to restart
    * Now require PHP 7 for the PHP CloudI API for its exception hierarchy

2020-07-11 Michael Truog   <mjtruog at protonmail dot com>

    * Improve Python/C CloudI API exception handling
    * Add the fatal_exception class to the C++ CloudI API