@@ -6,6 +6,7 @@
     * Fix the configuration code paths so they are updated after a
       service update has been processed
       (with usage of code_paths_add and/or code_paths_remove)
+    * Add 'releases' to the 'code' configuration file section
 
 2020-07-15 Michael Truog   <mjtruog at protonmail dot com>
 
